// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render() should render component correctly when buttonPlacement is "buttonsInside" 1`] = `
<div
  style={
    {
      "display": "flex",
    }
  }
>
  <Popup
    content="Double-click to set to 0"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <div
        className="ui input small"
      >
        <input
          maxLength={3}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "color": "#85b7d9",
              "fontWeight": "bold",
              "paddingLeft": "0.5em",
              "paddingRight": "0.5em",
              "textAlign": "right",
              "width": "2.5em",
            }
          }
          type="text"
          value="12"
        />
      </div>
    }
  />
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Popup
      content="Double-click to increment by 4"
      disabled={false}
      mouseEnterDelay={500}
      mouseLeaveDelay={200}
      offset={0}
      on="hover"
      pinned={false}
      position="top left"
      trigger={
        <Button
          as="button"
          disabled={false}
          icon="caret up"
          onClick={[Function]}
          size="small"
          style={
            {
              "borderRadius": 0,
              "flex": "0 0 50%",
              "margin": 0,
              "maxHeight": "unset",
              "minHeight": "unset",
              "padding": "0 0.2em",
            }
          }
        />
      }
    />
    <Popup
      content="Double-click to decrement by 4"
      disabled={false}
      mouseEnterDelay={500}
      mouseLeaveDelay={200}
      offset={0}
      on="hover"
      pinned={false}
      position="top left"
      trigger={
        <Button
          as="button"
          disabled={false}
          icon="caret down"
          onClick={[Function]}
          size="small"
          style={
            {
              "borderRadius": 0,
              "flex": "0 0 50%",
              "margin": 0,
              "maxHeight": "unset",
              "minHeight": "unset",
              "padding": "0 0.2em",
            }
          }
        />
      }
    />
  </div>
  <Popup
    content="Double-click to set to 0"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <div
        className="ui input small"
      >
        <input
          maxLength={3}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "borderRadius": 0,
              "paddingLeft": "0.5em",
              "paddingRight": "0.5em",
              "textAlign": "right",
              "width": "2.5em",
            }
          }
          type="text"
          value="30"
        />
      </div>
    }
  />
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Popup
      content="Double-click to increment by 5"
      disabled={false}
      mouseEnterDelay={500}
      mouseLeaveDelay={200}
      offset={0}
      on="hover"
      pinned={false}
      position="top left"
      trigger={
        <Button
          as="button"
          disabled={false}
          icon="caret up"
          onClick={[Function]}
          size="small"
          style={
            {
              "borderBottomLeftRadius": 0,
              "borderBottomRightRadius": 0,
              "borderTopLeftRadius": 0,
              "flex": "0 0 50%",
              "margin": 0,
              "maxHeight": "unset",
              "minHeight": "unset",
              "padding": "0 0.2em",
            }
          }
        />
      }
    />
    <Popup
      content="Double-click to decrement by 5"
      disabled={false}
      mouseEnterDelay={500}
      mouseLeaveDelay={200}
      offset={0}
      on="hover"
      pinned={false}
      position="top left"
      trigger={
        <Button
          as="button"
          disabled={false}
          icon="caret down"
          onClick={[Function]}
          size="small"
          style={
            {
              "borderBottomLeftRadius": 0,
              "borderTopLeftRadius": 0,
              "borderTopRightRadius": 0,
              "flex": "0 0 50%",
              "margin": 0,
              "maxHeight": "unset",
              "minHeight": "unset",
              "padding": "0 0.2em",
            }
          }
        />
      }
    />
  </div>
</div>
`;

exports[`render() should render component correctly when buttonPlacement is "buttonsOutside" 1`] = `
<div
  style={
    {
      "display": "flex",
    }
  }
>
  <Popup
    content="Double-click to decrement by 4"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <Button
        as="button"
        disabled={false}
        icon="minus"
        onClick={[Function]}
        size="small"
        style={
          {
            "borderBottomRightRadius": 0,
            "borderTopRightRadius": 0,
            "margin": 0,
            "maxHeight": "unset",
            "minHeight": "unset",
          }
        }
      />
    }
  />
  <Popup
    content="Double-click to set to 0"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <div
        className="ui input small"
      >
        <input
          maxLength={3}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "borderColor": "rgba(34, 36, 38, .05)",
              "borderRadius": 0,
              "borderRightColor": "rgba(34, 36, 38, .05)",
              "color": "#85b7d9",
              "fontWeight": "bold",
              "paddingLeft": "0.5em",
              "paddingRight": "0.5em",
              "textAlign": "right",
              "width": "2.5em",
            }
          }
          type="text"
          value="12"
        />
      </div>
    }
  />
  <Popup
    content="Double-click to set to 0"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <div
        className="ui input small"
      >
        <input
          maxLength={3}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "borderColor": "rgba(34, 36, 38, .05)",
              "borderLeft": "none",
              "borderRadius": 0,
              "paddingLeft": "0.5em",
              "paddingRight": "0.5em",
              "textAlign": "right",
              "width": "2.5em",
            }
          }
          type="text"
          value="30"
        />
      </div>
    }
  />
  <Popup
    content="Double-click to increment by 4"
    disabled={false}
    mouseEnterDelay={500}
    mouseLeaveDelay={200}
    offset={0}
    on="hover"
    pinned={false}
    position="top left"
    trigger={
      <Button
        as="button"
        disabled={false}
        icon="plus"
        onClick={[Function]}
        size="small"
        style={
          {
            "borderBottomLeftRadius": 0,
            "borderTopLeftRadius": 0,
            "margin": 0,
            "maxHeight": "unset",
            "minHeight": "unset",
          }
        }
      />
    }
  />
</div>
`;
